--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <!-- Navbar End (Coin and Amount) -->
                 <div class="navbar-end flex flex-col items-center gap-2 lg:flex-row lg:gap-3">
                     <img src="./assets/coin.png" alt="Coin" class="w-8 h-8">
-                    <p class="text-lg font-semibold">5500 BDT</p>
+                    <p class="text-lg font-semibold"><span id="main-balance">700000</span>BDT</p>
                 </div>
             </div>
         </header>
@@ -81,7 +81,7 @@
                     <button
                         class="flex justify-center text-center gap-2 bg-gray-200 py-2 px-4 rounded-lg  border-gray-400">
                         <img src="./assets/coin.png" alt="">
-                        <p class="text-black"> <span id="amount1">1000</span> BDT</p>
+                        <p class="text-black"> <span id="amount1">200000</span> BDT</p>
                     </button>
                     <h2 class="text-xl text-black font-semibold mt-6">Donate for Flood at Noakhali, Bangladesh</h2>
 
@@ -145,7 +145,7 @@
                     <button
                         class="flex justify-center text-center gap-2 bg-gray-200 py-2 px-4 rounded-lg  border-gray-400">
                         <img src="./assets/coin.png" alt="">
-                        <p class="text-black">10500 BDT</p>
+                        <p class="text-black"><span id="amount2">200000</span></p>
                     </button>
                     <h2 class="text-xl text-black font-semibold mt-6">Donate for Flood Relief in Feni,Bangladesh
                     </h2>
@@ -208,7 +208,7 @@
                     <button
                         class="flex justify-center text-center gap-2 bg-gray-200 py-2 px-4 rounded-lg  border-gray-400">
                         <img src="./assets/coin.png" alt="">
-                        <p class="text-black">10500 BDT</p>
+                        <p class="text-black"><span id="amount3">300000</span></p>
                     </button>
                     <h2 class="text-xl text-black font-semibold mt-6">Aid for Injured in the Quota Movement</h2>
 
