--- a/index.html
+++ b/index.html
@@ -109,26 +109,28 @@
                             <button id="btn-donate1"
                                 class="btn-donate w-full mt-2 bg-[#B4F461] py-2 rounded-lg text-black"
                                 onclick="my_modal_1.showModal()">Donate Now</button>
-                            <dialog id="my_modal_1"
-                                class="modal  text-center flex flex-col justify-center content-center ">
+                            <div id="modalHidden1" class="">
+                                <dialog id="my_modal_1"
+                                    class="modal  text-center flex flex-col justify-center content-center ">
 
-                                <div class="modal-box bg-white text-black text-center ">
-                                    <h3 class="text-lg font-bold">Congrates!</h3>
-                                    <p class="flex justify-center items-center mt-2"><img class=""
-                                            src="./assets/coin.png" alt="">
-                                    </p>
-                                    <p class="py-4 ">You Have Donate for Humankind</p>
-                                    <h3 class="font-semibold ">Successfully</h3>
-                                    <div class="modal-action text-center text-center flex justify-center flex-col">
-                                        <form method="dialog">
-                                            <!-- if there is a button in form, it will close the modal -->
-                                            <button
-                                                class=" text-center bg-gray-200 py-2 px-3 rounded-lg text-black">Close
-                                                confirmation</button>
-                                        </form>
+                                    <div class=" modal-box bg-white text-black text-center ">
+                                        <h3 class="text-lg font-bold">Congrates!</h3>
+                                        <p class="flex justify-center items-center mt-2"><img class=""
+                                                src="./assets/coin.png" alt="">
+                                        </p>
+                                        <p class="py-4 ">You Have Donate for Humankind</p>
+                                        <h3 class="font-semibold ">Successfully</h3>
+                                        <div class="modal-action text-center text-center flex justify-center flex-col">
+                                            <form method="dialog">
+                                                <!-- if there is a button in form, it will close the modal -->
+                                                <button
+                                                    class=" text-center bg-gray-200 py-2 px-3 rounded-lg text-black">Close
+                                                    confirmation</button>
+                                            </form>
+                                        </div>
                                     </div>
-                                </div>
-                            </dialog>
+                                </dialog>
+                            </div>
                         </div>
                     </div>
                 </div>
