Donate and history button update

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
         <!-- Button -->
         <div class="container w-full h-auto mx-auto ">
             <div class="text-center mt-14 mb-8">
-                <buttton id="donate-money" class="py-4 px-8 rounded-lg mr-4 bg-[#B4F461]">Donation</buttton>
+                <buttton id="donate-money" class="py-4 px-8 border border-slate-300 rounded-lg mr-4 bg-[#B4F461]">
+                    Donation</buttton>
                 <buttton id="donate-history"
                     class="py-4 px-8 rounded-lg border border-slate-300 hover:border-indigo-300 divide-gray-200">
                     History
