update history layout

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     </main>
     <!-- history secton -->
     <section>
-        <div id="history" class="history hidden container mx-auto w-full h-auto">
+        <div id="history" class="history hidden container mx-auto w-full h-auto p-6">
         </div>
     </section>
     <script src="./JS/index.js"></script>
