update input field

--- a/blog.html
+++ b/blog.html
@@ -31,19 +31,19 @@
         <header class="mx-auto bg-[#fcf3d8] w-full h-auto ">
             <div
                 class="container py-6 mx-auto pb-8 flex flex-col items-center justify-center gap-4 lg:flex-row lg:justify-between">
-                <!-- Navbar Start (Blog button) -->
+                <!-- Blog button -->
                 <div class="lg:navbar-start lg:mr-6">
                     <button class="bg-[#B4F461] text-xl font-semibold px-8 py-3 rounded-lg"><a
                             href="./index.html">Home</a></button>
                 </div>
 
-                <!-- Navbar Center (Logo and Text) -->
+                <!-- Logo and Text-->
                 <div class="navbar-center flex flex-col items-center gap-2 lg:flex-row lg:gap-4 lg:ml-[360px]">
                     <img src="./assets/logo.png" alt="Donate Bangladesh Logo" class="w-10 h-10">
                     <p class="text-xl font-semibold">Donate Bangladesh</p>
                 </div>
 
-                <!-- Navbar End (Coin and Amount) -->
+                <!-- Coin and Amount-->
                 <div class="navbar-end flex flex-col items-center gap-2 lg:flex-row lg:gap-3">
                     <img src="./assets/coin.png" alt="Coin" class="w-8 h-8">
                     <p class="text-lg font-semibold">10000 BDT</p>
@@ -53,7 +53,6 @@
         <br>
 
         <main class="container mx-auto p-4">
-            <!-- Heading with responsive text size and centered alignment -->
             <div class="flex  gap-2  mb-4  justify-center lg:justify-start text-center items-center mx-auto">
                 <h1 class="text-2xl sm:text-3xl">Important FAQ</h1>
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -63,7 +62,7 @@
                 </svg>
             </div>
 
-            <!-- Accordion for FAQ with responsive styles -->
+            <!--  FAQ  -->
             <div class="join join-vertical w-full">
                 <div class="collapse collapse-arrow join-item border-base-300 border">
                     <input type="radio" name="my-accordion-4" checked="checked" />
