--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
         <!-- Donation and History Button -->
         <div class="container w-full h-auto mx-auto ">
             <div class="text-center mt-14 mb-8">
-                <buttton id="donate-money"
+                <button id="donate-money"
                     class="py-4 px-8 border border-slate-300 hover:border-indigo-300 rounded-lg mr-4 bg-[#B4F461]">
-                    Donation</buttton>
-                <buttton id="donate-history"
+                    Donation</button>
+                <button id="donate-history"
                     class="py-4 px-8 rounded-lg border border-slate-300 hover:border-indigo-300 divide-gray-200">
                     History
-                </buttton>
+                </button>
             </div>
         </div>
     </section>
@@ -98,7 +98,7 @@
 
                         <!-- Donation input and button -->
                         <div class="mt-12">
-                            <input id="input-donate1" type="text" placeholder="Write Donation Amount"
+                            <input id="input-donate1" type="number" placeholder="Write Donation Amount"
                                 class="input-donate w-full p-3 bg-white border border-gray-300 rounded-lg focus:outline-none focus:border-gray-400 mb-8" />
 
                             <!--  modal -->
@@ -159,7 +159,7 @@
 
                         <!-- Donation input and button -->
                         <div class="mt-12">
-                            <input id="input-donate2" type="text" placeholder="Write Donation Amount"
+                            <input id="input-donate2" type="number" placeholder="Write Donation Amount"
                                 class="input-donate w-full p-3 bg-white border border-gray-300 rounded-lg focus:outline-none focus:border-gray-400 mb-8" />
 
                             <button id="btn-donate2"
@@ -218,7 +218,7 @@
 
                         <!-- Donation input and button -->
                         <div class="mt-12">
-                            <input id="input-donate3" type="text" placeholder="Write Donation Amount"
+                            <input id="input-donate3" type="number" placeholder="Write Donation Amount"
                                 class="input-donate w-full p-3 bg-white border border-gray-300 rounded-lg focus:outline-none focus:border-gray-400 mb-8" />
 
                             <button id="btn-donate3"
