--- a/blog.html
+++ b/blog.html
@@ -63,7 +63,7 @@
             </div>
 
             <!--  FAQ  -->
-            <div class="join join-vertical w-full">
+            <div class="join join-vertical w-full p-2">
                 <div class="collapse collapse-arrow join-item border-base-300 border">
                     <input type="radio" name="my-accordion-4" checked="checked" />
                     <div class="collapse-title text-lg sm:text-xl font-medium">What is the Document Object Model(DOM)?
