add common function

--- a/blog.html
+++ b/blog.html
@@ -82,12 +82,12 @@
                         DOM?</div>
                     <div class="collapse-content">
                         <p>
-                        <ul class="list-disc pl-4">
-                            <li> Use document.getElementById()</li>
-                            <li> Use document.getElementsByClassName()</li>
-                            <li> Use document.getElementsByTagName()</li>
-                            <li> Use document.querySelector()</li>
-                            <li> Use document.querySelectorAll()</li>
+                        <ul class="list-disc pl-2">
+                            <li>document.getElementById()</li>
+                            <li>document.getElementsByClassName()</li>
+                            <li>document.getElementsByTagName()</li>
+                            <li>document.querySelector()</li>
+                            <li>document.querySelectorAll()</li>
                         </ul>
                         </p>
                     </div>
