update text and other

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 </head>
 
 <body style="font-family: 'Lexend', sans-serif;">
-    <section class="sm:sticky top-0 bg-white/50 backdrop-blur-md z-10 pb-2">
-        <header id="header" class="mx-auto bg-[#faf5e7] w-full h-auto ">
+    <section class="sm:sticky top-0 bg-white/50 backdrop-blur-md z-10 pb-1">
+        <header id="header" class="mx-auto bg-[#f8f1db] w-full h-auto ">
             <div
                 class="container py-6 mx-auto pb-8 flex flex-col items-center justify-center gap-4 lg:flex-row lg:justify-between">
                 <!-- Blog button -->
@@ -54,7 +54,7 @@
 
         <!-- Donation and History Button -->
         <div class="container w-full h-auto mx-auto ">
-            <div class="text-center mt-14 mb-8">
+            <div class="text-center mt-14 mb-5">
                 <button id="donate-money"
                     class="py-4 px-8 border border-slate-300 hover:border-indigo-300 rounded-lg mr-4 bg-[#B4F461]">
                     Donation</button>
@@ -254,6 +254,11 @@
         <div id="history" class="history hidden container mx-auto w-full h-auto p-6">
         </div>
     </section>
+
+    <footer class=" mx-auto bg-[#f8f1db] w-full h-auto mt-4">
+        <div class="container w-full max-h-36 p-10 ">
+        </div>
+    </footer>
     <script src="./JS/index.js"></script>
 </body>
 
